<resources>
    <string name="app_name">TinyWorld</string>
    <string name="shouye">首页</string>
    <string name="shopping">购物车</string>
    <string name="mine">我的</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="setting">账号设置</string>
    <string name="like">我的收藏</string>
    <string name="histroy">浏览记录</string>
    <string name="suggestion">意见反馈</string>
    <string name="taobao">淘宝授权登录</string>
    <string name="weishouquan">未授权</string>
    <string name="clearcache">清除缓存</string>
    <string name="cache">0M</string>
    <string name="savedata">省流量模式</string>
    <string name="data">非wifi下,降低图片质量</string>
    <string name="push">推送设置</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="password">设置登录密码</string>
    <string name="agree_register">注册即同意</string>
    <string name="register_text">小世界网络服务使用协议</string>
    <string name="register_text2">小世界网络服务协议</string>
    <string name="agreement_longtext">1.接受条款\n\n
小世界网及其旗下网站根据以下服务条款为您提供服务。这些条款可由小世界随时更新，且毋须另行通知。小世界使用协议（以下简称“使用协议”）一旦发生变动，小世界将在网页上公布修改内容。修改后的使用协议一旦在网页上公布即有效代替原来的使用协议。此外，当您使用小世界特殊服务时，您和小世界应遵守小世界随时公布的与该服务相关的指引和规则。前述所有的指引和规则，均构成本使用协议的一部分。 您在使用小世界提供的各项服务之前，应仔细阅读本使用协议。如您不同意本使用协议及/或随时对其的修改，请您立即停止使用小世界网所提供的全部服务；您一旦使用小世界服务，即视为您已了解并完全同意本使用协议各项内容，包括小世界对使用协议随时所做的任何修改，并成为小世界用户（以下简称“用户”）。\n\n
2.服务说明\n\n
小世界目前向用户提供如下服务：发布并分享网购经验；求推荐网购商品，收藏网购商品和店铺；在小世界中发布消息、话题、上传图片。除非本使用协议另有其它明示规定，增加或强化目前本服务的任何新功能，包括所推出的新产品，均受到本使用协议之规范。您了解并同意，本服务仅依其当前所呈现的状况提供，对于任何用户信息或个人化设定之时效、删除、传递错误、未予储存或其它任何问题，小世界均不承担任何责任。小世界保留不经事先通知﻿维护、升级或其它目的暂停本服务任何部分的权利。\n\n
3.遵守法律\n\n
您同意遵守中华人民共和国相关法律法规的所有规定，并对以任何方式使用您的密码和您的帐号使用本服务的任何行为及其结果承担全部责任。如您的行为违反国家法律和法规的任何规定，有可能构成犯罪的，将被追究刑事责任，并由您承担全部法律责任。\n\n 同时如果小世界有理由认为您的任何行为，包括但不限于您的任何言论和其它行为违反或可能违反国家法律和法规的任何规定，小世界可在任何时候不经任何事先通知终止向您提供服务。\n\n
4.您的注册义务\n\n
为了能使用本服务，您同意以下事项：依本服务注册提示请您填写正确的注册邮箱、密码和名号，并确保今后更新的登录邮箱、名号、头像等资料的有效性和合法性。若您提供任何违法、不道德或小世界认为不适合在小世界上展示的资料；或者小世界有理由怀疑你的资料属于程序或恶意操作，小世界有权暂停或终止您的帐号，并拒绝您于现在和未来使用本服务之全部或任何部分。\n\n 小世界无须对任何用户的任何登记资料承担任何责任，包括但不限于鉴别、核实任何登记资料的真实性、正确性、完整性、适用性及/或是否为最新资料的责任。\n\n
5.用户帐号、密码及安全\n\n
完成本服务的注册程序并成功注册之后，您可使用您的Email和密码，登录到您在小世界的帐号（下称“帐号”）。保护您帐号安全，是您的责任。 您应对所有使用您的密码及帐号的活动负完全的责任。您同意：\n\n 1). 您的小世界帐号遭到未获授权的使用，或者发生其它任何安全问题时，您将立即通知小世界；\n\n 2). 如果您未保管好自己的帐号和密码，因此而产生的任何损失或损害，小世界无法也不承担任何责任；\n\n 3). 每个用户都要对其帐号中的所有行为和事件负全责。如果您未保管好自己的帐号和密码而对您、小世界或第三方造成的损害，您将负全部责任。\n\n
6. 小世界隐私权政策\n\n
1). 保护用户个人信息是小世界的一项基本原则。除法律法规规定的情形外，未经您的许可小世界不会向任何公司、组织或者个人披露您的个人信息。\n\n 2). 您在注册帐号或使用本服务的过程中，可能需要填写一些必要的信息，请保持这些信息的真实、准确、合法、有效并注意及时更新，以便小世界向您提供及时有效的帮助，或更好地为您提供服务。若国家法律法规或政策有特殊规定的，您需要填写真实的身份信息。若您填写的信息不完整，则可能无法使用本服务或在使用过程中受到限制。\n\n 3). 一般情况下，您可随时浏览、修改自己提交的信息，但出于安全性和身份识别（如号码申诉服务等）的考虑，您可能无法修改注册时提供的初始注册信息及其他验证信息。\n\n 4). 用户应对通过本服务了解、接收或可接触到的包括但不限于其他用户在内的任何人的个人信息予以充分尊重，您不应以搜集、复制、存储、传播或以其他任何方式使用其他用户的个人信息，否则，由此产生的后果由您自行承担。 \n\n5). 小世界将运用各种安全技术和程序建立完善的管理制度来保护您的个人信息，以免遭受未经授权的访问、使用或披露。\n\n 6). 小世界非常重视对未成年人个人信息的保护。若您是18周岁以下的未成年人，在使用本服务前，应事先取得您家长或法定监护人的书面同意。\n\n
7.提供者之责任\n\n
根据有关法律法规，小世界在此郑重提请您注意，任何经由本服务而发布、上传的文字、资讯、资料、音乐、照片、图形、视讯、信息或其它资料（以下简称“内容”），无论系公开还是私下传送，均由内容提供者承担责任。小世界仅为用户提供内容存储空间，无法控制经由本服务传送之内容，因此不保证内容的正确性、完整性或品质。您已预知使用本服务时，可能会接触到令人不快、不适当或令人厌恶之内容。在任何情况下，小世界均不为任何内容负责，但小世界有权依法停止传输任何前述内容并采取相应行动，包括但不限于暂停用户使用本服务的全部或部分，保存有关记录，并向有关机关报告。\n\n
8.用户行为\n\n
用户同意将不会利用本服务进行任何违法或不正当的活动，包括但不限于下列行为∶ \n\n1).发布或以其它方式传送含有下列内容之一的信息： 　　　* 反对宪法所确定的基本原则的； 　　　* 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的； 　　　* 损害国家荣誉和利益的； 　　　* 煽动民族仇恨、民族歧视、破坏民族团结的； 　　　* 破坏国家宗教政策，宣扬邪教和封建迷信的； 　　　* 散布谣言，扰乱社会秩序，破坏社会稳定的； 　　　* 散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的； 　　　* 侮辱或者诽谤他人，侵害他人合法权利的； 　　　* 含有虚假、诈骗、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容； 　　　* 含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的； 　　　* 含有小世界认为不适合在小世界展示的内容；\n\n 2).以任何方式危害他人的合法权益；\n\n 3).冒充其他任何人或机构，或以虚伪不实的方式陈述或谎称与任何人或机构有关；\n\n 4).依据任何法律或合约或法定关系（例如由于雇佣关系和依据保密合约所得知或揭露之内部资料、专属及机密资料）知悉但无权传送之任何内容加以发布、发送电子邮件或以其它方式传送；\n\n 5).将侵害他人著作权、专利权、商标权、商业秘密、或其它专属权利（以下简称“专属权利”）之内容加以发布或以其它方式传送；\n\n 6).将任何广告信函、促销资料、“垃圾邮件”、““滥发信件”、“连锁信件”、“直销”或其它任何形式的劝诱资料加以发布、发送或以其它方式传送； \n\n7).将设计目的在于干扰、破坏或限制任何计算机软件、硬件或通讯设备功能之计算机病毒（包括但不限于木马程序（trojan horses）、蠕虫（worms）、定时炸弹、删除蝇（cancelbots）（以下简称“病毒”）或其它计算机代码、档案和程序之任何资料，加以发布、发送或以其它方式传送；\n\n 8).干扰或破坏本服务或与本服务相连线之服务器和网络，或违反任何关于本服务连线网络之规定、程序、政策或规范；\n\n 9).跟踪、人肉搜索或以其它方式骚扰他人； \n\n10). 故意或非故意地违反任何适用的当地、国家法律，以及任何具有法律效力的规则；\n\n 11). 未经合法授权而截获、篡改、收集、储存或删除他人个人信息、站内邮件或其它数据资料，或将获知的此类资料用于任何非法或不正当目的。 您已认可小世界未对用户的使用行为进行全面控制，您使用任何内容时，包括依赖前述内容之正确性、完整性或实用性时，您同意将自行加以判断并承担所有风险，而不依赖于小世界。但小世界依其自行之考虑，拒绝和删除可经由本服务提供之违反本条款的或其它引起小世界反感的任何内容。 您了解并同意，小世界依据法律法规的要求，或基于诚信为了以下目的或在合理必要范围内，认定必须将内容加以保存或揭露时，得加以保存或揭露： a）遵守法律程序； b）执行本使用协议； c）回应任何第三人提出的权利主张； d）保护小世界、其用户及公众之权利、财产或个人安全； e）其它小世界认为有必要的情况。\n\n
9.国际使用之特别警告\n\n
您已了解国际互联网的无国界性，同意遵守当地所有关于网上行为及内容之法律法规。您特别同意遵守有关从中国或您所在国家或地区输出信息之传输的所有适用法律法规。\n\n
10.在小世界发布的公开信息\n\n
1).在本使用协议中，“本服务公开使用区域”系指一般公众可以使用的区域； \n\n2).用户在小世界上传或发布的内容，用户应保证其为著作权人或已取得合法授权，并且该内容不会侵犯任何第三方的合法权益，用户同意授予小世界所有上述内容在全球范围内的免费、不可撤销的、永久的、可再许可或转让的独家使用权许可，据该许可小世界将有权以展示、推广及其他不为我法律所禁止的方式使用前述内容。\n\n
11.免责声明\n\n
1). 用户明确同意其将文字、资讯、资料、音乐、照片、图形、视讯、信息或其它个人资料上传到互联网上，有可能被其他组织或个人复制、转载、或做其它用途的风险完全由其自己承担；因其使用小世界服务而产生的一切后果也由其自己承担，我们对用户不承担任何责任。\n\n 2). 微博、人人网等官方帐号对用户的相关文字、资讯、资料、音乐、照片、图形、视讯、信息或其它个人资料进行推广发布的，不属于对用户相关权益的侵权行为、小世界不承担任何责任。\n\n 3). 网站上针对用户的恶意评论，经用户的举报我们会采取删除处理，但不保证服务一定能满足用户的要求，也不对该恶意评论负任何法律责任。\n\n
12.赔偿\n\n
由于您通过本服务提供、发布或传送之内容、您与本服务连线、您违反本使用协议、或您侵害他人任何权利因而衍生或导致任何第三人提出任何索赔或请求，包括合理的律师费，您同意赔偿小世界及其子公司、关联企业、高级职员、代理人、品牌共有人或其它合作伙伴及员工，并使其免受损害，并承担由此引发的全部法律责任。\n\n
13.禁止商業行為\n\n
您同意不对本服务任何部分或本服务之使用或获得，进行复制、拷贝、出售、转售或用于任何其它商业目的。\n\n
14.关于使用及储存之一般措施\n\n
您承认关于本服务的使用小世界有权制订一般措施及限制，包含但不限于本服务将保留所发布内容或其它发布内容之最长期间，以及一定期间内您使用本服务之次数上限（及每次使用时间之上限）。通过本服务发布或传送之任何信息、通讯资料和其它内容，如被删除或未予储存，您同意小世界毋须承担任何责任。您也同意，小世界有权依其自行之考虑，不论通知与否，随时变更这些一般措施及限制。\n\n
15.服务之修改\n\n
小世界有权于任何时间暂时或永久修改或终止本服务（或其任何部分），且无论通知与否。您同意对于本服务所作的任何修改、暂停或终止，小世界对您和任何第三人均无需承担任何责任。\n\n
16.终止服务\n\n
您同意小世界基于其自行之考虑，因任何理由，包含但不限于缺乏使用，或小世界认为您已经违反本使用协议的文字及精神，终止您的帐号或本服务之使用（或服务之任何部分），并将您在本服务内任何内容加以移除并删除。您同意依本使用协议任何规定提供之本服务，无需进行事先通知即可中断或终止，您承认并同意，小世界可立即关闭或删除您的帐号及您帐号中所有相关信息及文件，及/或禁止继续使用前述文件或本服务。此外，您同意若本服务之使用被中断或终止或您的帐号及相关信息和文件被关闭或删除，小世界对您或任何第三人均不承担任何责任。\n\n
17.与广告商及其他第三方进行交易\n\n
您通过本网站与广告商及其他第三方进行任何形式的通讯或商业往来，或参与促销活动，包含相关商品或服务之付款及交付，以及达成的其它任何相关条款、条件、保证或声明，完全为您与广告商及其他第三方之间之行为。您因前述任何交易或前述广告商及其他第三方而遭受的任何性质的损失或损害，小世界对此不负任何法律责任。\n\n
18.小世界之专属权利\n\n
您了解并同意，本服务及本服务所使用之相关软件（以下简称“软件”）含有受到相关知识产权及其它法律保护之专有保密资料。您也了解并同意，经由本服务或广告商向您呈现之赞助广告或信息所包含之内容，亦受到著作权、商标权、服务商标、专利权或其它专属权利之法律保护。未经小世界或广告商明示授权，您不得修改、出租、出借、出售、散布本服务或软件之任何部份或全部，或据以制作衍生著作，或使用擅自修改后的软件，包括但不限于为了未经授权而使用本服务之目的。小世界仅授予您个人、不可移转及非专属之使用权，使您得于单机计算机使用其软件之目的码，但您不得（并不得允许任何第三人）复制、修改、创作衍生著作、进行还原工程、反向组译，或以其它方式发现原始码，或出售、转让、再授权或提供软件设定担保，或以其它方式移转软件之任何权利。您同意将通过由小世界所提供的界面而非任何其它途径使用本服务。\n\n
19.担保与保证\n\n
您明确了解并同意∶\n\n 1).本使用协议的任何规定不会免除小世界对造成您人身伤害的、或因故意或重大过失造成您财产损失的任何责任； \n\n2).您使用本服务之风险由您个人负担。本服务系依“现状”及“现有”基础提供。小世界对本服务不提供任何明示或默示的担保或保证，包含但不限于商业适售性、特定目的之适用性及未侵害他人权利等担保或保证；\n\n 3).小世界不保证以下事项∶ \n　　　* 本服务将符合您的要求； 　　　\n* 本服务将不受干扰、及时提供、安全可靠或不会出错； 　\n　　* 使用本服务取得之结果正确可靠； 　\n　　* 您经由本服务购买或取得之任何产品、服务、资讯或其它信息将符合您的期望；\n 4).是否使用本服务下载或取得任何资料应由您自行考虑且自负风险，因任何资料之下载而导致的您电脑系统之任何损坏或数据流失等后果，由您自行承担；\n\n 5).您自小世界或经由本服务取得的任何建议或信息，无论是书面或口头形式，除非本使用协议有明确规定，将不构成本使用协议以外之任何保证。\n\n 6).如果小世界和/或合作单位使用您提供的肖像、姓名或其他合法权益，您同意将您的肖像、姓名和/或其他合法权益一并授权给小世界和/或合作单位使用。\n\n
20.责任限制\n\n
您明确了解并同意，基于以下原因而造成的，包括但不限于利润、信誉、应用、数据损失或其它无形损失，小世界不承担任何直接、间接、附带、特别、衍生性或惩罚性赔偿责任：\n\n 1).本服务之使用或无法使用；\n 2).为替换从或通过本服务购买或取得之任何商品、数据、信息、服务，收到的讯息，或缔结之交易而发生的成本； \n3).您的传输或数据遭到未获授权的存取或变造；\n 4).任何第三方在本服务中所作之声明或行为；\n 5).与本服务相关的其它事宜，但本使用协议有明确规定的除外；\n 6).第三方以任何方式发布或投递欺诈性信息，或诱导用户受到经济损失，小世界不承担任何责任。\n\n
21.小世界商标信息\n\n
小世界网、小世界以及其它小世界注册商标、标志及产品、服务名称，均为小世界公司之商标（以下简称“小世界标记”）。未经小世界事先书面同意，您同意不将小世界标记以任何方式展示或使用或作其它处理，或表示您有权展示、使用或另行处理小世界标记。\n\n
22.用户专属权利\n\n
小世界尊重他人知识产权，呼吁用户也要同样尊重知识产权。\n 小世界之服务与资料是基于“现状”提供，而且小世界明确地表示拒绝对于“服务”、“资料”或“产品”给予任何明示或暗示之保证，包括但不限于，得为商业使用或适合于特定目的之保证。小世界对于因“服务”、“资料”或“产品”所生之任何直接、间接、附带的或因此而导致之衍生性损失概不负责。\n 如果您对他人的知识产权造成了侵害，小世界将依国家法律法规的规定，或在适当的情形下，将依其服务条款或其相关规范性规定，删除特定内容或以至终止您对账户的使用。\n 小世界尊重他人的任何权利（包括知识产权），同时也要求我们的使用者也尊重他人之权利。小世界在适当情况下，得自行决定终止侵害或违反他人权利之使用者的帐号。\n 若您认为您的作品的著作权遭到侵害或您的知识产权被侵犯，根据《信息网络传播权保护条例》的规定，您需及时向小世界联系并提供详实的举证材料。或请到中华人民共和国国家版权局下载《要求删除或断开链接侵权网络内容的通知》（下称“删除通知”）的示范格式，如果您不明白“删除通知”的内容，请登录中华人民共和国国家版权局查看《要求删除或断开链接侵权网络内容的通知》填写说明。 \n\n23.一般条款 \n\n1).本使用协议、社区指导原则和免责声明构成您与小世界之全部协议，并规范您对于本服务之使用行为。在您使用相关服务、使用第三方提供的内容或软件时，亦应遵从所适用之附加条款及条件；\n 2).本使用协议及您与小世界之关系，均受到中华人民共和国法律管辖。您与小世界就本服务、本使用协议或其它有关事项发生的争议，应首先友好协商解决，协商不成时应提请中国国际经济贸易仲裁委员会仲裁，仲裁裁决是终局性的，对双方均有约束力；\n 3).小世界未行使或执行本使用协议任何权利或规定，不构成对前述权利或权利之放弃；\n 4).倘本使用协议之任何规定因与中华人民共和国法律抵触而无效，您依然同意应依照法律，努力使该规定所反映之当事人意向具备效力，且本使用协议其它规定仍应具有完整的效力及效果；\n 5).本使用协议之标题仅供方便而设，不具任何法律或契约效果；\n 6).只要您登录了小世界，就代表您认可以上所有协议。\n 7).小世界对本使用协议享有最终解释权。\n\n
    </string>
    <string name="forget_password">忘记密码？</string>
    <string name="new_register">新用户注册</string>
    <string name="disanfang">第三方账号登录</string>
    <string name="QQ">QQ</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping_text_up">快登陆淘宝购物车</string>
    <string name="shopping_text_down">乐享小世界优惠吧</string>
    <string name="shopping_login">淘宝授权登陆</string>
    <string name="shopping_top_text">购物车</string>
    <string name="splash_text">www.xiaoshijie.com</string>
</resources>