<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/shopping_top_text"
        android:text="@string/shopping_top_text"
        android:textColor="#262626"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/shopping_top_text"
        android:background="#EDEDED"
        />
    <ImageView
        android:id="@+id/shopping_cart"
        android:src="@mipmap/ic_shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    <TextView
        android:id="@+id/shopping_text_up"
        android:text="@string/shopping_text_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopping_cart"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/shopping_text_down"
        android:text="@string/shopping_text_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopping_text_up"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        />
    <Button
        android:id="@+id/shopping_login"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:text="@string/shopping_login"
        android:textColor="@color/white"
        android:background="@drawable/shop_button_shape"
        android:padding="5dp"
        android:layout_below="@id/shopping_text_down"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>