<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >
    <RelativeLayout
        android:id="@+id/relativelayout_setting"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_setting_icon"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_setting"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_tip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray2"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_like"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_like_icon"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/mine_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_like"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_tip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray2"
        />
    <RelativeLayout
        android:id="@+id/relativelayout_histroy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_histroy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_history"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/mine_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/histroy"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_histroy"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_tip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/lightgray2"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_suggestion"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_suggestion_icon"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggestion"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_suggestion"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_tip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray2"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_taobao"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_taobao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_taobao"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:id="@+id/tv_taobao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taobao"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_taobao"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_tip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/tv_shouquan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weishouquan"
            android:gravity="center_vertical"
            android:layout_alignTop="@+id/iv_more"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/iv_more"
            android:layout_toStartOf="@+id/iv_more" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/lightgray2"
        />

    <RelativeLayout
        android:id="@+id/relativelayout_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_clear_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_clear_cache_icon"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearcache"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_clear_cache"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/iv_more2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more_tip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv_more2"
            android:text="@string/cache"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray2"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_save_data_icon"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savedata"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_save_data"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/iv_switch_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/switch_off"
            android:layout_marginRight="16dp"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/iv_switch_data"
            android:text="@string/data"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"
            android:id="@+id/textView" />


    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray2"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/iv_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mine_push_icon"
            android:layout_marginLeft="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_push"
            android:textColor="@color/black"
            />
        <ImageView
            android:id="@+id/iv_switch_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/switch_on"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/lightgray2"
        />

</LinearLayout>