<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mine_fragment__register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray2"
    android:orientation="vertical"
    tools:context=".view.view.activity.MineFragment_RegisterActivity">

    <RelativeLayout
        android:id="@+id/relativelayout_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back_dark"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_86"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="手机号"
            android:textSize="16sp"
            android:layout_toRightOf="@id/tv_86"
            android:background="@null"
            android:layout_marginLeft="20dp"
            android:inputType="phone" />


    </RelativeLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        />

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
    <!--android:layout_marginLeft="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:background="@color/white">-->

        <!--<EditText-->
            <!--android:id="@+id/edt_phone_yanzhengma"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:hint="请输入短信验证码"-->
            <!--android:textSize="16sp"-->
            <!--android:background="@null"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:inputType="number" />-->
        <!--<TextView-->
            <!--android:id="@+id/tv_yanzhengma"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:text="@string/yanzhengma"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:textSize="16sp"-->
            <!--android:layout_centerVertical="true"-->
            <!--/>-->
        <!--<View-->
            <!--android:id="@+id/view_line_vertical"-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_height="26dp"-->
            <!--android:background="@color/lightgray2"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_toLeftOf="@id/tv_yanzhengma"-->
            <!--/>-->


    <!--</RelativeLayout>-->



    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:inputType="textPassword"

            />

        <ImageView
            android:id="@+id/iv_pwd_visible"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/pwd_hide"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/register"
        android:text="@string/register"
        android:textColor="@color/white"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_register"
            android:layout_weight="1"
            android:layout_marginLeft="80dp"
            />
        <TextView
            android:id="@+id/tv_agree_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="6dp"
            android:text="@string/register_text"
            android:singleLine="true"
            android:textColor="@color/register"
            />
    </LinearLayout>

</LinearLayout>
